--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <li>
                     <code><a href="https://en.wikipedia.org/wiki/Requirements_analysis">Requirements and Issues Analysis</a></code> In addition to customer's own problems and unknown problems of finding customers</li>
                 <li><code>People Who with Key Information and Final Decision</code> Joint Requirements Development (JRD) Sessions</li>
+                <li><code>Target Audience</code></li>
             </ul>
             <li>
                 <h2>Planning</h2>
@@ -43,29 +44,104 @@
             <ul>
                 <li><code>Contract-Style Requirement Lists</code> Measurable Goals、Use Cases、Prototypes. Price will be the ultimate goal of this stage</li>
                 <li><code>Gather Information and References</code> Pictures、Text、Music and other Materials, Reference Website</li>
-                <li><code>Architecture Diagram</code></li>
+                <li><code>Site Map</code><b> Example</b></li>
                 <ul>
                     <li>Budget</li>
+
                     <li>Key Vision of Web Entrance</li>
+
                     <li>About Us</li>
                     <ul>
-                        <li>Key</li>
-                        <li>Key</li>
-                        <li>Key</li>
+                        <li>Company Profile</li>
+                        <li>Site History</li>
+                        <li>Team Organization & Member</li>
                     </ul>
-                    <li>Key</li>
-                    <li>Key</li>
-                    <li>Key</li>
-                    <li>Key</li>
-                    <li>Key</li>
-                    <li>Key</li>
-                    <li>Key</li>
+
+                    <li>Service Items</li>
+                    <ul>
+                        <li>RWD / PWA / SPA / AMP Website Building、Design</li>
+                        <li>Corporate Identity System : Commodity Logo、Banner、EDM、Newsletter、Packaging、Photography、Animation</li>
+                        <li></li>
+                        <li>Integrated Business、Marketing、Community Strategy</li>
+                        <li>Course Lectures & Teaching</li>
+                    </ul>
+
+                    <li>Gallery</li>
+                    <ul>
+                        <li>( Government、Agency、Corporate ) Identity Website</li>
+                        <li>E-Commerce Website</li>
+                        <li>System Program Website</li>
+                        <li>Graphic / Space Type Production</li>
+                    </ul>
+
+                    <li>Quotation Consultation</li>
+                    <ul>
+                        <li>Website Quote Reference</li>
+                        <li>Other Quotation Reference</li>
+                        <li>Online Consultation</li>
+                    </ul>
+
+                    <li>Design Flow</li>
+                    <ul>
+                        <li>General Process</li>
+                        <li>Website Design Process</li>
+                        <li>Other Design Processes</li>
+                    </ul>
+
+                    <li>Relevant Information</li>
+                    <ul>
+                        <li>Common Problem</li>
+                        <li>Internet Marketing</li>
+                        <li>Website Space Rental</li>
+                        <li>Website Teaching and Maintenance</li>
+                    </ul>
+
+                    <li>Contact Us</li>
+                </ul>
+                <li><code>System Architecture Diagram</code><b> Example</b></li>
+                <ul>
+                    <li>Turn on the System</li>
+                    <ul>
+                        <li>Sign in</li>
+                        <ul>
+                            <li>Latest news</li>
+                            <li>Calendar</li>
+                            <li>Message Board</li>
+                            <li>Order Query</li>
+                            <ul>
+                                <li>List Filter Query</li>
+                                <li>Checking Order</li>
+                                <li>Details Info</li>
+                                <li>Analysis Report</li>
+                                <li>File Download</li>
+                            </ul>
+                            <li>Add Order</li>
+                            <ul>
+                                <li>Details Info</li>
+                                <li>More Info</li>
+                                <li>Count of Money</li>
+                            </ul>
+                        </ul>
+                        <li>Register Account</li>
+                        <ul>
+                            <li>Fill in Account Password</li>
+                            <li>Receive Verification Letter</li>
+                            <li>Phone Verification</li>
+                        </ul>
+                        <li>Password Inquiry</li>
+                    </ul>
+
                 </ul>
             </ul>
             <li>
                 <h2>Design</h2>
             </li>
             <ul>
+                <li><code>Flow Chart</code> Terminal、Process、Decision、Input/Output</li>
+                <ul>
+
+                </ul>
+                <li><code><a href="https://dbdiagram.io/d/5e86e0544495b02c3b89305d">Database Diagram</a></code></li>
                 <li><code>UML</code> Unified Modeling Language</li>
                 <li><code>SCD</code> System Context Diagram</li>
                 <li><code>DFD</code> Data Flow Diagram</li>
@@ -120,7 +196,9 @@
                     <code>Parallax scrolling</code> ( Background Sliding Speed Slower than Foreground ) Computer Graphics. beginnings in <span class="beginnings_year">1930</span></li>
                 <li>
                     <code>Sprite</code> ( Synthetic Image Positioning ) Computer Graphics. beginnings in <span class="beginnings_year">1974</span></li>
+
                 </br>
+
                 <li>
                     <code>Internet</code> Carries a Vast Range of Information Resources and Services, Such as inter-linked Hypertext Documents and Applications of WWW, Electronic Mail, Telephony, and File Sharing. Not to be confused with the WWW. beginnings
                     in <span class="beginnings_year">1980s</span></li>
@@ -129,7 +207,13 @@
                     <code>hypertext</code>, and are accessible over the Internet. beginnings in <span class="beginnings_year">1991</span></li>
                 <li>
                     <code>API</code> ( Application Programming Interface ) Not only WebAPI, More Libraries、frameworks、Operating systems、Remote APIs.</li>
+
                 </br>
+
+                <li>
+                    <code>CDN</code>( Content Delivery Network ) Geographically Distributed Network of Proxy Servers and their Data Centers. beginnings in <span class="beginnings_year">1990s</span></li>
+                <li>
+                    <code>SEO</code>( Search Engine Optimization ) process of growing the quality and quantity of website traffic by increasing the visibility of a website or a web page to users of a web search engine. beginnings in <span class="beginnings_year">1990s</span></li>
                 <li>
                     <code>GIF</code> Graphics Interchange Format. beginnings in <span class="beginnings_year">1989</span></li>
                 <li>
