--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
             </li>
             <ul>
                 <li>
-                    <code><a href="https://en.wikipedia.org/wiki/Requirements_analysis">Requirements and Issues Analysis</a></code> In addition to customer's own problems and unknown problems of finding customers</li>
-                <li><code>People Who with Key Information and Final Decision</code> Joint Requirements Development (JRD) Sessions</li>
-                <li><code>Target Audience</code></li>
+                    <code><a href="https://en.wikipedia.org/wiki/Requirements_analysis">Requirements and Issues Analysis</a></code> In addition to customer's own problems and unknown problems of finding customers.</li>
+                <li><code>People Who with Key Information and Final Decision</code> Joint Requirements Development (JRD) Sessions.</li>
+                <li><code>TA</code>Target Audience</li>
             </ul>
             <li>
                 <h2>Planning</h2>
             </li>
             <ul>
-                <li><code>Contract-Style Requirement Lists</code> Measurable Goals、Use Cases、Prototypes. Price will be the ultimate goal of this stage</li>
-                <li><code>Gather Information and References</code> Pictures、Text、Music and other Materials, Reference Website</li>
+                <li><code>Contract-Style Requirement Lists</code> Measurable Goals、Use Cases、Prototypes ( Blueprint ). Price & Contract will be the ultimate Goal of this Stage.</li>
+                <li><code>Gather Information and References</code> Pictures、Text、Music and other Materials, Reference Website.</li>
                 <li><code>Site Map</code><b> Example</b></li>
                 <ul>
                     <li>Budget</li>
@@ -141,7 +141,7 @@
                 <ul>
 
                 </ul>
-                <li><code><a href="https://dbdiagram.io/d/5e86e0544495b02c3b89305d">Database Diagram</a></code></li>
+                <li><code><a href="https://dbdiagram.io/d/5e86e0544495b02c3b89305d">Database Diagram</a></code> Data Glossary & Explanation</li>
                 <li><code>UML</code> Unified Modeling Language</li>
                 <li><code>SCD</code> System Context Diagram</li>
                 <li><code>DFD</code> Data Flow Diagram</li>
@@ -151,8 +151,6 @@
                 <li><code>Process Specification</code></li>
                 <li><code>ERD</code> Entity-relationship model</li>
             </ul>
-
-
 
             <li>
                 <h2>Implementation</h2>
@@ -242,9 +240,12 @@
                 <li>
                     <code>Adobe Flash</code> Used for Animations、Game、Applications <span class="beginnings_year">2005 - 2020</span> change to <code>Animate CC</code> ( Compiled to HTML5 Canvas )</li>
                 <li>
+                    <code>GA</code> ( Google Analytics ) JavaScript Code for track Web Traffic, It feedback to google statistics website, not your own data lake. beginnings in <span class="beginnings_year">2005</span></li>
+                <li>
+                    <code>GTM</code> ( Google Tag Manager ) Marketers will be able to Add, Edit or Remove Marketing and Measurement Tags without the Intervention of Webmasters.</li>
+                <li>
                     <code>Canvas</code> HTML5 element. It is a low level, procedural model that updates scriptable rendering of 2D shapes and bitmap images and does not have a built-in scene graph, but through WebGL it allows 3D shapes and images to be
-                    displayed and making Animations、Game、Applications. beginnings in <span class="beginnings_year">2006</span>
-                </li>
+                    displayed and making Animations、Game、Applications. beginnings in <span class="beginnings_year">2006</span></li>
             </ul>
         </ul>
         <ul>
