--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
                         <li><code><a href="https://dbdiagram.io/d/5e86e0544495b02c3b89305d">Database Diagram</a></code> Data Glossary & Explanation & Dictionary Describe</li>
                         <li><code>UML</code> Unified Modeling Language</li>
                         <li><code>PDL</code> Procedural Description Language</li>
-                        <li><code>SCD</code> System Context Diagram</li>
-                        <li><code>DFD</code> Data Flow Diagram</li>
-                        <li><code>Structure Chart</code></li>
-                        <li><code>HIPO</code> Hierarchy plus Input-Process-Output</li>
-                        <li><code>PS</code> Process Specification</li>
+                        <li>SCD System Context Diagram</li>
+                        <li>DFD Data Flow Diagram</li>
+                        <li>Structure Chart</li>
+                        <li><code>HIPO Diagram</code> Hierarchy plus Input-Process-Output</li>
+                        <li>PS Process Specification</li>
                         <li><code>ERD</code> Entity-relationship model</li>
                     </ul>
                     <li>Example <code>PDL</code> : How to Coding ? Just Speak It.</li>
@@ -173,13 +173,13 @@
                         <li>End</li>
                     </ul>
                     <li>Summary</li>
-                    <ul>Stage : Flow Chart
+                    <ul>Stage : <code>Flow Chart</code>
                         <li>DescriptionUser Processes and Rules</li>
                     </ul>
-                    <ul>Stage : Unified Modeling Language
+                    <ul>Stage : <code>Unified Modeling Language</code>
                         <li>Description System Behavior</li>
                     </ul>
-                    <ul>Stage : Procedural Description Language
+                    <ul>Stage : <code>Procedural Description Language</code>
                         <li>Description Program Logic</li>
                     </ul>
                 </ul>
@@ -191,7 +191,7 @@
 
                 <ul>
                     <h4><a href="https://zh.wikipedia.org/wiki/%E7%BC%96%E7%A8%8B%E8%8C%83%E5%9E%8B">Programming Paradigm</a></h4>
-                    <li>Level : ( External Reference ) Library | System → Module → Model → Logic.</li>
+                    <li>Level : ( External Reference ) Library / Kit / Plugin | ( Internal Components ) System → Module → Model → Logic.</li>
                     <a href="https://hackmd.io/@k139/r1y-9LmK4/%2Fs%2FH1x46U7KN?type=book#%E7%B5%90%E6%A7%8B%E5%8C%96%E5%88%86%E6%9E%90%E8%88%87%E8%A8%AD%E8%A8%88%E8%A9%95%E4%BC%B0%E6%BA%96%E5%89%87">
                         <li><code>Cohesion</code> Relevance of what is done inside the Module.</li>
                         <li><code>Coupling</code> The degree of correlation between modules within the System.</li>
@@ -258,6 +258,80 @@
                     <li>MIS ( Management Information System )</li>
                     <li>DevOps ( Development ) ( Operations )</li>
                     <li>SRE ( Site Reliability Engineer )</li>
+                </ul>
+            </ul>
+            <h3><a href="https://zh.wikipedia.org/wiki/%E4%BF%A1%E6%81%AF%E5%AE%89%E5%85%A8">Information Security</a></h3>
+            <ul>
+                <li>Hardware Environment ( People )</li>
+                <ul>
+                    <li>Authority Authentication</li>
+                    <li>Single Entrance Prevents Back Door</li>
+                </ul>
+                <li>Operating Environment ( Operating System )</li>
+                <ul>
+                    <li>Antivirus Software</li>
+                    <li>Firewall</li>
+                    <li>Regularly Updated</li>
+                    <li>IDS Intrusion-Detection System</li>
+                    <li>IP Address ( Blocking / Limit ) </li>
+                </ul>
+                <li>Execution Environment ( Software )</li>
+                <ul>
+                    <h3>Why</h3>
+                    <ul>
+                        <li>Information security never ends, The best way is to understand and respond.</li>
+                    </ul>
+                    <h3>How</h3>
+                    <ul>
+                        <li>Encryption</li>
+                        <ul>
+                            <a href="https://wpointer.com/wordpress-tutorials/wordpress-maintenance/security/how-to-add-ssl/">
+                                <li><code>https</code> ( HyperText Transfer Protocol Secure ) HTTP over TLS、HTTP over SSL、HTTP Secure, Use SSL / TLS to Add sealed Packages.</li>
+                            </a>
+                            <li><code>SSL</code> ( Secure Sockets Layer ) / <code>TSL</code> ( Transport Layer Security )</li>
+                            <li><code>Token</code> Object (in software or in hardware) which Represents the Right to Perform some Operation.</li>
+                        </ul>
+                        <li>Anti-Attack ( Library / Kit / Plugin )</li>
+                        <ul></ul>
+                    </ul>
+                    <h3>What</h3>
+                    <ul>
+                        <li>Exploit Vulnerability</li>
+                        <ul>
+                            <li>0Day</li>
+                            <li>Code Injection</li>
+                            <ul>
+                                <li><code>XSS</code> ( Cross-Site Scripting )</li>
+                                <li><code>SQL Injection</code></li>
+                                <li>PHP / ASP / Shell / File Injection</li>
+                                <li>Logic Bomb</li>
+                            </ul>
+                            <li>( Buffer / Payload ) Overflow </li>
+                            <ul>
+                                <li>POD ( Ping of Death )</li>
+                                <li>DDoS ( Distributed Denial-of-Service Attack )</li>
+                            </ul>
+                            <li>Intercept Packet</li>
+                            <ul>
+                                <li><code>CSRF</code> ( Cross-Site Request Forgery )</li>
+                                <li>ARP Spoofing</li>
+                                <li>Cellphone / Computer Surveillance</li>
+                            </ul>
+                            <li>Backdoor Purpose to Easily Modify and Test the Defects in Program.</li>
+
+                        </ul>
+                        <li>Malware</li>
+                        <ul>
+                            <li>Adware</li>
+                            <li>Spyware</li>
+                            <li>Shareware</li>
+                            <li>Computer Virus</li>
+                            <li>Computer Worm</li>
+                            <li>Denial-of-Access Attack</li>
+                            <li>Trojan Horse Attacker to Access Users' Personal Information.</li>
+                        </ul>
+                    </ul>
+
                 </ul>
             </ul>
 
