--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
                 <ul>
                     <h4><a href="https://zh.wikipedia.org/wiki/%E7%BC%96%E7%A8%8B%E8%8C%83%E5%9E%8B">Programming Paradigm</a></h4>
-                    <li>Level : ( External Reference ) Library / Kit / Plugin | ( Internal Components ) System → Module → Model → Logic.</li>
+                    <li>Level : ( External Reference ) Library / SDK ( Software Development Kit ) / Plugin | ( Internal Components ) System → Module → Model → Logic.</li>
                     <a href="https://hackmd.io/@k139/r1y-9LmK4/%2Fs%2FH1x46U7KN?type=book#%E7%B5%90%E6%A7%8B%E5%8C%96%E5%88%86%E6%9E%90%E8%88%87%E8%A8%AD%E8%A8%88%E8%A9%95%E4%BC%B0%E6%BA%96%E5%89%87">
                         <li><code>Cohesion</code> Relevance of what is done inside the Module.</li>
                         <li><code>Coupling</code> The degree of correlation between modules within the System.</li>
@@ -291,7 +291,7 @@
                             <li><code>SSL</code> ( Secure Sockets Layer ) / <code>TSL</code> ( Transport Layer Security )</li>
                             <li><code>Token</code> Object (in software or in hardware) which Represents the Right to Perform some Operation.</li>
                         </ul>
-                        <li>Anti-Attack ( Library / Kit / Plugin )</li>
+                        <li>Anti-Attack ( Library / SDK ( Software Development Kit ) / Plugin )</li>
                         <ul></ul>
                     </ul>
                     <h3>What</h3>
