--- a/index.html
+++ b/index.html
@@ -131,6 +131,27 @@
                     </ul>
 
                 </ul>
+                <h2>aaS ( <a href="https://progressbar.tw/posts/51">As a Service</a> )</h2>
+                <ul>
+                    <li>IaaS ( Infrastructure as a Service ) : Server Room、Network、Storage Hardware、Server</li>
+                    <ul>
+                        <li>PaaS ( Platform as a Service ) : OS、Middleware Software、Runtime Environment</li>
+                        <ul>
+                            <li>SaaS ( Software as a Service ) : Data and Application Access</li>
+                            <li>
+                                <a href="https://kknews.cc/zh-tw/tech/63byarp.html">Cloud / API ( Application Programming Interface ) :</a></li>
+                            <ul>
+                                <li>BaaS ( Backend as a Service ) : File or Data Storage、Push Service、Authentication Service</li>
+                                <li>FaaS ( Function as a Service ) : Serverless Computing、Microservices</li>
+                                <h4>More...</h4>
+                                <li>CaaS ( Communications as a Service ) : Message、Voice、Video、Conference、Communication Collaboration...</li>
+                                <li>DaaS ( Data as a Service ) : Aggregation、Data Quality Management、Data Cleaning</li>
+                                <li>MaaS ( Machine as a Service ) : IoT ( Mobility、Transport、Surveillance、Electronic Control ) System</li>
+                                <li>NaaS ( Network as a Service ) : Network Virtualization、Security Equipment Virtualization、SDN</li>
+                            </ul>
+                        </ul>
+                    </ul>
+                </ul>
             </ul>
             <li>
                 <h2>Design</h2>
