--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <ul>
                     <li>IaaS ( Infrastructure as a Service ) : Server Room、Network、Storage Hardware、Server</li>
                     <ul>
-                        <li>PaaS ( Platform as a Service ) : OS、Middleware Software、Runtime Environment</li>
+                        <li>PaaS ( Platform as a Service ) : OS、Middleware Software、Runtime Environment、FTP</li>
                         <ul>
                             <li>SaaS ( Software as a Service ) : Data and Application Access</li>
                             <li>
