--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <ul>
                             <li>Network Traffic</li>
                             <li>Multi-Platform</li>
-                            <li>Blog or Viedos or Broadcast Recording</li>
+                            <li>Self-Media : Blog or Viedos or Broadcast Recording</li>
                         </ul>
                         <a href="https://www.johntool.com/what-is-affiliate-marketing/">
                             <li><code>Affiliate Marketing</code></li>
