--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
                 <ul>
                     <h3>Work Flow</h3>
                     <ul>
-                        <li>System Architecture Diagram → Flow Chart → ( <a href="https://medium.com/monospace-tw/%E6%9B%B4%E9%81%A9%E5%90%88-ui-%E8%A8%AD%E8%A8%88%E5%B8%AB%E8%A3%BD%E4%BD%9C%E7%9A%84%E9%A0%81%E9%9D%A2%E6%B5%81%E7%A8%8B%E5%9C%96-wireflow-d51b785d85c2">Wireflow</a>                            → Wireframe → Mockup → Prototype ) UIUX-Designer → Front-End → Back-End </li>
-                        Most of time Just CSS Slicing (PSD to HTML)...
+                        <li>System Architecture Diagram → Flow Chart → ( <a href="https://medium.com/monospace-tw/%E6%9B%B4%E9%81%A9%E5%90%88-ui-%E8%A8%AD%E8%A8%88%E5%B8%AB%E8%A3%BD%E4%BD%9C%E7%9A%84%E9%A0%81%E9%9D%A2%E6%B5%81%E7%A8%8B%E5%9C%96-wireflow-d51b785d85c2">Wireflow</a>                            → Wireframe → Mockup → Prototype ) UIUX-Designer → Front-End → Layout → Back-End </li>
+                        Most of time Just Layout : CSS Slicing (PSD to HTML)...
                         <li>System Architecture Diagram → Flow Chart → ( Unified Modeling Language → Procedural Description Language ) System Designer -> Back-End</li>
                         Most of time Just Demand List to Programing...
                         <li>( Entity-Relationship Diagram → Database Normalization ) Database Administrator → Back-End</li>
