--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
                             <li>Network Traffic</li>
                             <li>Multi-Platform</li>
                             <li>Self-Media : Blog or Viedos or Broadcast Recording</li>
+                            <li>When I don't have Professional Knowledge ?</ㄠ>
+                                <ul>Use "問題意識" to
+                                    <li>Be a Collector</li>
+                                    <li>Be a Attempter</li>
+                                    <li>Be a Commenter</li>
+                                </ul>
                         </ul>
                         <a href="https://www.johntool.com/what-is-affiliate-marketing/">
                             <li><code>Affiliate Marketing</code></li>
