--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
                     <li>SAM ( Service Addressable Market )</li>
                     <li>SOM ( Serviceable Obtainable Market )</li>
                 </ul>
+                <li><a href="https://wiki.mbalib.com/wiki/%E5%95%86%E4%B8%9A%E6%A8%A1%E5%BC%8F">Business Model</a></li>
+                <ul>
+                    <li>B2B ( Business to Business )</li>
+                    <li>B2C ( Business to Consumer )</li>
+                    <li>C2B ( Customer to Business )</li>
+                    <li>C2C ( Customer to Consumer )</li>
+                    <li>O2O ( Online To Offline )</li>
+                    <li>P2P ( Peer to Peer )</li>
+                    <li>P2C ( Production to Consumer )</li>
+                </ul>
 
                 <li><code>MVP</code>Minimum Viable Product</li>
                 <ul>
