--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                     <li>B2C ( Business to Consumer )</li>
                     <li>C2B ( Customer to Business )</li>
                     <li>C2C ( Customer to Consumer )</li>
+                    <li>C2M ( Customer to Manufactory )</li>
                     <li>O2O ( Online To Offline )</li>
                     <li>P2P ( Peer to Peer )</li>
                     <li>P2C ( Production to Consumer )</li>
