--- a/index.html
+++ b/index.html
@@ -71,9 +71,15 @@
                             <li>Once Revenue</li>
                         </ul>
                     </ul>
+                    <li>OPM ( Other people’s money )</li>
+                    <ul>
+                        <li>Interest-free OPM, more benefits</li>
+                        <li>Low interest rate OPM, borrow as much as you can</li>
+                        <li>Medium to high interest OPM, use with caution</li>
+                    </ul>
                 </ul>
 
-                <li><code>MVP</code>Minimum Viable Product</li>
+                <li><code>MVP</code> Minimum Viable Product</li>
                 <ul>
                     <li>Customer feedback</li>
                     <ul>
