--- a/index.html
+++ b/index.html
@@ -33,10 +33,16 @@
                 <ul>
                     <li>Traffic must be able to be controlled ( Save or Reuse ) and analyzed at the early stage</li>
                     <li>The right button can be copied but the source must be bound Url prompt</li>
-                    <li>SEO 、 Show Sample 、 Multimedia</li>
+                    <li>SEO 、 Show Sample ( Web / System / Flat or three-dimensional ) 、 Multimedia ( Viedos / Blogs )</li>
                     <li>Presented in studio mode can avoid many problems</li>
+                    <li>Main vision emphasizes business content</li>
+                    <li>Multiple portals A / B Test present different textures</li>
+                    <li>Single contact method but must judge where portals from</li>
                     <ul><b>Example</b>
                         <li><a href="https://monoame.com/">墨雨設計</a></li>
+                        <li>
+                            <a href="https://www.bigboycancode.com/">鎰誠數位 Thebigboycode</a>
+                        </li>
                     </ul>
                 </ul>
                 <li>Can the Framework meet the Expansion?</li>
